tests/ui/enum-discriminant/issue-70453-polymorphic-ctfe.stderr
error: generic parameters may not be used in enum discriminant values
  --> $DIR/issue-70453-polymorphic-ctfe.rs:9:41
   |
LL |     Some(T) = core::mem::size_of::<*mut T>(),
   |                                         ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in enum discriminant values

error: aborting due to 1 previous error

